UI has been updated; it now exists
This update is almost completely focused on properly setting up the UI to be less rudimentary than browser alerts. It isn't nice looking yet and doesn't seem to work nicely with mobile, but it works nonetheless for now.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,12 @@
 <html>
-
-    <object type="text/html" data="build/app.html"></object>
+    <style>
+        #mainFile
+        {
+            min-width: 100vw;
+            min-height: 100vh;
+        }
+        
+    </style>
+    <object type="text/html" id = 'mainFile' data="build/app.html"></object>
 
 </html>
