Further formatting changes
Updated CSS/formatting to remove unnecessary scrollbars and increase readability

--- a/index.html
+++ b/index.html
@@ -2,8 +2,12 @@
     <style>
         #mainFile
         {
-            min-width: 100vw;
-            min-height: 100vh;
+            min-width: 95vw;
+            min-height: 95vh;
+            border-left: 0;
+            border-right: 0;
+            padding-left: 0; 
+            padding-right: 0;
         }
         
     </style>
